<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfirstapp.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/accelHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelHeader" />

    <TextView
        android:id="@+id/x_accel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accelHeader"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/accelHeader"
        android:layout_marginTop="15dp"
        android:text="X-axis:" />

    <TextView
        android:id="@+id/y_accel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/x_accel"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/x_accel"
        android:layout_marginTop="30dp"
        android:text="Y-axis:" />

    <TextView
        android:id="@+id/z_accel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/y_accel"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/y_accel"
        android:layout_marginTop="31dp"
        android:text="Z-axis:" />

    <TextView
        android:id="@+id/y_angle_accel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/y_accel"
        android:layout_alignBottom="@+id/y_accel"
        android:layout_alignLeft="@+id/x_angle_accel"
        android:layout_alignParentRight="true"
        android:text="Angle-Y" />

    <TextView
        android:id="@+id/x_angle_accel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/y_accel"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="180dp"
        android:layout_toRightOf="@+id/accelHeader"
        android:text="Angle-X" />

    <ImageView
        android:id="@+id/ahrsAccelIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/z_accel"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/ahrsDesc"
        android:src="@drawable/ahrs" />

    <TextView
        android:id="@+id/gyroHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/z_accel"
        android:layout_below="@+id/z_accel"
        android:layout_marginTop="60dp"
        android:text="@string/gyroHeader" />

    <TextView
        android:id="@+id/x_gyro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gyroHeader"
        android:layout_below="@+id/gyroHeader"
        android:layout_marginTop="30dp"
        android:text="X-axis:" />

    <TextView
        android:id="@+id/y_gyro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/x_gyro"
        android:layout_below="@+id/x_gyro"
        android:layout_marginTop="30dp"
        android:text="Y-axis:" />

    <TextView
        android:id="@+id/z_gyro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/y_gyro"
        android:layout_below="@+id/y_gyro"
        android:layout_marginTop="30dp"
        android:text="Z-axis:" />

    <TextView
        android:id="@+id/x_angle_gyro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/x_gyro"
        android:layout_alignBottom="@+id/x_gyro"
        android:layout_alignLeft="@+id/y_angle_accel"
        android:layout_alignParentRight="true"
        android:text="Angle-X" />

    <TextView
        android:id="@+id/y_angle_gyro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/y_gyro"
        android:layout_alignBottom="@+id/y_gyro"
        android:layout_alignLeft="@+id/x_angle_gyro"
        android:layout_alignParentRight="true"
        android:text="Angle-Y" />

    <TextView
        android:id="@+id/z_angle_gyro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/z_gyro"
        android:layout_alignBottom="@+id/z_gyro"
        android:layout_alignLeft="@+id/y_angle_gyro"
        android:layout_alignParentRight="true"
        android:text="Angle-Z" />

    <ImageView
        android:id="@+id/ahrsGyroIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ahrsAccelIndicator"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/ahrsAccelIndicator"
        android:contentDescription="@string/ahrsDesc"
        android:src="@drawable/ahrs" />

    <ImageView
        android:id="@+id/ahrsKalmanIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ahrsAccelTitle"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/ahrsGyroIndicator"
        android:contentDescription="@string/ahrsDesc"
        android:src="@drawable/ahrs" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ahrsAccelTitle"
        android:layout_alignBottom="@+id/ahrsAccelTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/ahrsGyroHeader" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/ahrsKalmanIndicator"
        android:layout_marginLeft="15dp"
        android:text="@string/ahrsKalmanHeader" />

    <TextView
        android:id="@+id/ahrsAccelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ahrsAccelIndicator"
        android:layout_alignRight="@+id/ahrsAccelIndicator"
        android:layout_marginBottom="38dp"
        android:layout_marginRight="19dp"
        android:text="@string/ahrsAccelHeader" />

    <TextView
        android:id="@+id/x_kalman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/kalmanHeader"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/kalmanHeader"
        android:layout_marginTop="30dp"
        android:text="X-Axis:" />

    <TextView
        android:id="@+id/y_kalman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/x_kalman"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/x_kalman"
        android:layout_marginTop="30dp"
        android:text="Y-axis:" />

    <TextView
        android:id="@+id/kalmanHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/z_gyro"
        android:layout_centerVertical="true"
        android:text="@string/kalmanHeader" />

    <TextView
        android:id="@+id/xOmegaKalman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/x_kalman"
        android:layout_alignLeft="@+id/z_angle_gyro"
        android:layout_alignParentRight="true"
        android:text="X-omega" />

    <TextView
        android:id="@+id/yOmegaKalman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/y_kalman"
        android:layout_alignLeft="@+id/xOmegaKalman"
        android:layout_alignParentRight="true"
        android:text="Y-omega" />

</RelativeLayout>